--- a/src/css/ContactInfo.css
+++ b/src/css/ContactInfo.css
@@ -1,5 +1,4 @@
-.notes {
-    width: 300px;
+.contact-info {
     display: flex;
     align-items: start;
     justify-content: end;
@@ -7,6 +6,14 @@
     margin: 20px 0;
 }
 
-.notes h4 {
+.contact-info h4 {
     margin: 5px 0;
+}
+
+.contact-info ul {
+    padding: 0;
+}
+
+.contact-info li {
+    list-style: none;
 }
