--- a/src/css/PaymentDetails.css
+++ b/src/css/PaymentDetails.css
@@ -1,5 +1,4 @@
-.notes {
-    width: 300px;
+.payment-details {
     display: flex;
     align-items: start;
     justify-content: end;
@@ -7,6 +6,14 @@
     margin: 20px 0;
 }
 
-.notes h4 {
+.payment-details h4 {
     margin: 5px 0;
+}
+
+.payment-details ul {
+    padding: 0;
+}
+
+.payment-details li {
+    list-style: none;
 }
