--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,3 +9,19 @@ main {
     border-radius: 5px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
+
+button {
+    color: white;
+    font-weight: bold;
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05), 0 1px 3px 1px rgba(0, 0, 0, 0.1);
+    transition: all;
+    transition-duration: 300ms;
+    user-select: none;
+}
+
+button:hover {
+    background-color: transparent;
+    cursor: pointer;
+}
