--- a/src/css/InvoiceDetails.css
+++ b/src/css/InvoiceDetails.css
@@ -1,6 +1,13 @@
-.invoice-id {
+.invoice-details {
     display: flex;
     align-items: end;
+    justify-items: end;
+    flex-direction: column;
+}
+
+.invoice-id {
+    display: flex;
+    align-items: start;
     justify-content: end;
     flex-direction: column;
 }
@@ -11,4 +18,13 @@
 
 .invoice-id li {
     list-style: none;
+    padding: 5px 0;
+}
+
+.invoice-id li:nth-child(2) {
+    background-color: #f5f5f5
+}
+
+.invoice-id b {
+    padding-right: 5px;
 }
