Additional form styling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -35,7 +35,7 @@ input, select, textarea {
     background-color: #f1f1f17a;
     margin-top: 5px;
     margin-bottom: 20px;
-    color: #9b9b9b;
+    color: #6a6a6a;
 }
 
 input::placeholder,
