--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -47,12 +47,46 @@
     margin-top: 0;
 }
 
-.preview-btn {
-    margin: 5px 0;
+/* .delete-btn,
+.edit-btn {
+    width: 50px;
+    padding: 0.5rem 0;
+    margin: 0 5px;
+} */
+
+.item-summary div {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+}
+
+.delete-btn,
+.edit-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: fit-content;
+    padding: 0.5rem;
+    gap: 0.5rem;
+    font-weight: 400;
+}
+
+.delete-btn {
+    background-color: #ed5e68;
+    border: 2px solid #ed5e68;
+}
+
+.delete-btn:hover {
+    color: #ed5e68 ;
+}
+
+.preview-btn,
+.edit-btn {
     background-color: #3b82f6;
     border: 2px solid #3b82f6;
 }
 
-.preview-btn:hover {
+.preview-btn:hover,
+.edit-btn:hover {
     color: #3b82f6;
 }
