--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,7 @@ body {
 
 main {
     margin: 1.25rem;
-    padding: 1.25rem;
+    padding: 3rem;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -13,6 +13,7 @@ main {
 button {
     color: white;
     font-weight: bold;
+    margin: 5px 0;
     padding: 0.5rem 2rem;
     border-radius: 5px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05), 0 1px 3px 1px rgba(0, 0, 0, 0.1);
@@ -47,4 +48,15 @@ input::placeholder,
 select::placeholder,
 textarea::placeholder {
     color: #9b9b9b;
+}
+
+@media only screen and (max-width: 650px) {
+    main {
+        padding: 0.5rem;
+    }
+}
+@media only screen and (max-width: 750px) {
+    main {
+        padding: 2rem;
+    }
 }
