--- a/src/css/ItemSummary.css
+++ b/src/css/ItemSummary.css
@@ -1,18 +1,51 @@
 .item-summary {
     width: 100%;
-    margin: 50px 0;
+    margin: 0;
     border-spacing: 0;
+    table-layout: fixed;
     
 }
+
+.item-summary td {
+    padding: 0.5rem;
+}
+
 .item-summary thead tr {
     background-color: #f5f5f5;
     font-weight: 600;
 }
-.item-summary td {
-    padding: 0.5rem;
 
+.item-summary tbody td {
+    padding: 0 0.5rem;
 }
 
-.item-summary td:first-child {
-    width: 50%;
+.item-summary .col-1 {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.col-2,
+.col-3,
+.col-4 {
+    width: 100px;
+}
+
+.item-summary .col-5 {
+    width: 65px;
+}
+
+@media only screen and (max-width: 850px){
+    .col-2,
+    .col-3,
+    .col-4 {
+        width: 80px;
+    }
+}
+@media only screen and (max-width: 680px){
+    .col-2,
+    .col-3,
+    .col-4 {
+        width: 60px;
+    }
 }
