Modify components to comply with tests

--- a/src/css/ItemSummary.css
+++ b/src/css/ItemSummary.css
@@ -4,6 +4,8 @@
     margin-bottom: 30px;
     border-spacing: 0;
     table-layout: fixed;
+    transition: all;
+    transition-duration: 300ms;
     
 }
 
