--- a/src/css/EditInvoiceItem.css
+++ b/src/css/EditInvoiceItem.css
@@ -1,19 +1,15 @@
-td .item-details {
-    width: 775px;
-    table-layout: auto;
-    padding-left: 0;
-}
-
 .edit-item .item-details div:first-child {
-    width: 430px;
+    flex-grow: 1;
 }
 
 .edit-item .item-details {
-    align-items: flex-end;
+    align-items: center;
+    width: auto;
     padding: 1rem 0;
 }
 
 .edit-item .add-item-btn {
     margin: 0;
     height: 47px;
+    width: 85px;
 }
