--- a/src/css/InvoiceTotals.css
+++ b/src/css/InvoiceTotals.css
@@ -23,7 +23,7 @@
     list-style: none;
     padding: 10px;
     justify-content: space-between;
-    padding-right: 37px;
+    padding-right: 40px;
 }
 
 .invoice-totals div {
@@ -35,8 +35,8 @@
     justify-content: space-between;
     background-color: #f5f5f5;
     padding: 10px;
-    padding-right: 37px;
-    margin: 0;
+    padding-right: 40px;
+    margin: 0 !important;
 }
 
 .invoice-totals li:nth-child(2) {
