--- a/src/css/ContactInfo.css
+++ b/src/css/ContactInfo.css
@@ -16,8 +16,17 @@
 
 .contact-info li {
     list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    flex-grow: 1;
+    padding: 5px 0.5rem;
 }
 
 .contact-info b {
-    padding-right: 5px;
+    width: 100px;
+}
+
+.contact-info li:nth-child(2) {
+    background-color: #f5f5f5;
+    border-radius: 2px;
 }
