--- a/src/css/InvoiceDetails.css
+++ b/src/css/InvoiceDetails.css
@@ -19,12 +19,13 @@
 .invoice-id li {
     display: flex;
     list-style: none;
-    padding: 5px 0;
+    padding: 5px 0.5rem;
     justify-content: space-between;
 }
 
 .invoice-id li:nth-child(2) {
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
+    border-radius: 2px;
 }
 
 .invoice-id b {
