--- a/src/css/InvoiceTotals.css
+++ b/src/css/InvoiceTotals.css
@@ -1,20 +1,21 @@
-.invoice-totals-cont{
+/* .invoice-totals-cont{
     display: flex;
-    align-items: end;
-    justify-items: end;
+    align-items: flex-start;
+    justify-items: flex-end;
     flex-direction: column;
-}
+} */
 
-.invoice-totals {
+/* .invoice-totals {
     display: flex;
     align-items: start;
     justify-content: end;
     flex-direction: column;
     
-}
+} */
 
 .invoice-totals ul {
     padding: 0;
+    margin-bottom: 0;
 
 }
 
@@ -23,7 +24,7 @@
     list-style: none;
     padding: 10px;
     justify-content: space-between;
-    padding-right: 40px;
+    padding-right: 30px;
 }
 
 .invoice-totals div {
@@ -33,14 +34,17 @@
 .invoice-totals p {
     display: flex;
     justify-content: space-between;
-    background-color: #f5f5f5;
-    padding: 10px;
-    padding-right: 40px;
+    background-color: #777f89;
+    color: white;
+    border-radius: 2px;
+    padding: 20px 10px;
+    padding-right: 30px;
     margin: 0 !important;
 }
 
 .invoice-totals li:nth-child(2) {
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
+    border-radius: 2px;
 }
 
 .invoice-totals b {
