--- a/src/css/ItemSummary.css
+++ b/src/css/ItemSummary.css
@@ -25,8 +25,15 @@
 
 .preview-item-summary .header,
 .form-item-summary .header {
-    background-color: #f5f5f5;
+    background-color: #777f89;
+    color: white;
+    border-radius: 2px;
     font-weight: 600;
+}
+
+.form-item-summary .header {
+    background-color: #f5f5f5;
+    color: black;
 }
 
 .preview-item-summary .flex-table .first {
