--- a/src/css/PaymentDetails.css
+++ b/src/css/PaymentDetails.css
@@ -4,7 +4,7 @@
     align-items: start;
     justify-content: end;
     flex-direction: column;
-    margin-top: 60px;
+    /* margin-top: 60px; */
 }
 
 .payment-details h4 {
@@ -13,11 +13,12 @@
 
 .payment-details ul {
     padding: 0;
+    margin-bottom: 0;
 }
 .payment-details li {
     display: flex;
-    justify-content: space-between;
-    padding: 5px 0;
+    justify-content: flex-start;
+    padding: 5px 0.5rem;
 }
 
 .payment-details li {
@@ -25,9 +26,10 @@
 }
 
 .payment-details li:nth-child(2) {
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
+    border-radius: 2px;
 }
 
 .payment-details b {
-    padding-right: 40px;
+   width: 160px;
 }
