--- a/src/css/Preview.css
+++ b/src/css/Preview.css
@@ -8,3 +8,22 @@
 .flex-components p {
     margin: 5px;
 }
+
+.invoice-preview {
+    height: 307mm;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.invoice-preview .table {
+    margin-bottom: 50px;
+}
+
+.invoice-preview > div:last-child{
+    /* border: 1px solid red; */
+    /* align-self: flex-end; */
+    /* justify-content: flex-end */
+    /* flex-grow: 1; */
+    /* margin-bottom: 100px */
+}
