--- a/src/css/InvoiceDetails.css
+++ b/src/css/InvoiceDetails.css
@@ -1,14 +1,14 @@
 .invoice-details {
     display: flex;
-    align-items: end;
-    justify-items: end;
+    align-items: flex-end;
+    justify-items: flex-end;
     flex-direction: column;
 }
 
 .invoice-id {
     display: flex;
-    align-items: start;
-    justify-content: end;
+    align-items: flex-start;
+    justify-content: flex-end;
     flex-direction: column;
 }
 
