--- a/src/css/Notes.css
+++ b/src/css/Notes.css
@@ -1,8 +1,8 @@
 .notes {
     text-align: justify;
     display: flex;
-    align-items: start;
-    justify-content: end;
+    align-items: flex-start;
+    justify-content: flex-end;
     flex-direction: column;
     margin: 20px 0;
 }
@@ -16,7 +16,9 @@
 }
 
 .notes-cont {
-    border: 1px solid rgba(0 0 0 / 0.2);
+    /* border: 1px solid rgba(0 0 0 / 0.1); */
+    background-color: #f5f5f5;
+    border-radius: 2px;
     padding: 20px;
     width: 350px;
 }
