--- a/src/css/PaymentDetails.css
+++ b/src/css/PaymentDetails.css
@@ -1,8 +1,8 @@
 .payment-details {
     display: flex;
     align-self: flex-end;
-    align-items: start;
-    justify-content: end;
+    align-items: flex-start;
+    justify-content: flex-end;
     flex-direction: column;
     /* margin-top: 60px; */
 }
