--- a/src/css/VendorDetails.css
+++ b/src/css/VendorDetails.css
@@ -3,7 +3,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    /* margin: 30px 0; */
+    padding: 0 0.5rem;
 }
 
 .vendor-details h2 {
