--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -52,12 +52,8 @@
     padding-left: 5px !important;
 }
 
-.item-summary .btn-container {
-    display: flex;
-    justify-content: flex-end;
-    gap: 5px;
-    padding-left: 0;
-    padding-right: 0;
+.form-item-summary .btn-container {
+    padding-left: 10px;
 }
 
 .delete-btn,
@@ -95,25 +91,25 @@
     margin-top: 20px;
 }
 
-.invoice-totals {
+.invoice-total {
     display: flex;
     justify-content: flex-end;
 }
 
 .invoice-total div {
-    
+      width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 
 .invoice-total p {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-bottom: 2rem;
-    padding: 15px;
-    padding-right: 145px;
+    padding: 10px;
+    padding-right: 142px;
     background-color: #f5f5f5;
-    width: fit-content;
+    width: 100%;
     color: black;
 }
 .invoice-total b {
