--- a/src/css/InvoiceDetails.css
+++ b/src/css/InvoiceDetails.css
@@ -1,9 +1,18 @@
 .invoice-details {
     display: flex;
     align-items: flex-end;
-    justify-items: flex-end;
-    flex-direction: column;
+    justify-content: space-between;
+    flex-direction: row;
     margin-bottom: 20px;
+    padding-left: 0.5rem;
+}
+
+.abn {
+    font-size: 18px;
+}
+
+.abn b {
+    padding-right: 20px;
 }
 
 .invoice-id {
