--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -119,3 +119,8 @@
 .client-notes {
     padding: 25px 15px;
 }
+
+.error {
+    background-color: rgba(255, 0, 0, 0.05);
+    border: 3px solid rgba(255, 0, 0, 0.3);
+}
