--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -124,3 +124,10 @@
     background-color: rgba(255, 0, 0, 0.05);
     border: 3px solid rgba(255, 0, 0, 0.3);
 }
+
+.autofill {
+    margin-bottom: 20px;
+}
+.checkbox {
+    margin-left: 20px;
+}
