--- a/src/css/VendorDetails.css
+++ b/src/css/VendorDetails.css
@@ -9,3 +9,9 @@
 .vendor-details h2 {
     font-weight: initial;
 }
+
+.abn {
+    background-color: #f5f5f5;
+    border-radius: 2px;
+    padding: 5px 0.5rem 5px 0;
+}
